[package]
name = "cli"
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
documentation.workspace = true

[dependencies]
clap.workspace = true
crawler.workspace = true

[lints]
workspace = true
